Fix navbar alignment

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 4rem;
   min-height: 100vh;
   border: 1px solid red;
 }
@@ -80,7 +80,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 4rem 0;
+  padding: 3rem 0;
 }
 
 .center::before {
@@ -260,5 +260,21 @@
   padding: 0 3rem;
   /* margin: 3rem auto 6rem; */
   background-color: white;
-  text-align: right;
+  /* text-align: right; */
+  /* border: solid; */
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.nav {
+  /* border: solid; */
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  display: flex;
+  gap: 20px;
+}
+
+.img {
+  border-radius: var(--border-radius);
 }
